# PickyIt

./: .env.example  .gitignore  CONTRIBUTING.md  MigrateProd.ts  README.md  RefreshDB.ts  Start.ts  docker-compose.yml
backend/: Cargo.toml  dockerfile
backend/src/: main.rs
backend/src/middleware/: auth.rs
backend/src/routes/: calendar.rs  mod.rs
backend/src/routes/auth/: logout.rs  mod.rs  verify.rs
backend/src/routes/auth/callback/: google.rs
backend/src/util/: account.rs  app_state.rs  mod.rs  session.rs  user.rs
migration/: down.sql  up.sql
ui/: dockerfile  package-lock.json  package.json  svelte.config.js
ui/src-tauri/: tauri.conf.json
ui/src/components/: SidebarItem.svelte
ui/src/routes/: +layout.svelte
ui/src/routes/(auth)/login/: +page.svelte
ui/src/routes/(auth)/logout/: +page.svelte
ui/src/routes/(auth)/register/: +page.svelte
ui/src/routes/(dashboard)/: +layout.svelte  +layout.ts
ui/src/routes/(dashboard)/calendar/: +page.svelte
ui/src/routes/(dashboard)/ingredients/: +page.svelte
ui/src/routes/(dashboard)/meals/: +page.svelte
ui/src/routes/(dashboard)/meals/[id]/: +page.svelte
