[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }

axum = "0.8.1"
axum-extra = { version = "0.10.0", features = [
    "cookie",
    "query",
    "typed-header",
] }

sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
oauth2 = { version = "4.4.2", features = ["reqwest"] }
time = "0.3.37"
argon2 = "0.5.3"
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15.7"
